@@ -28,11 +28,13 @@ OBJS      += Root/KinematicUtils.o
 OBJS_READ += $(OBJS)
 OBJS_READ += Root/EventCount.o
 OBJS_READ += Root/Analysis.o Root/AnaTtresSL.o Root/AnaTtresSLMtt.o Root/AnaTuDoSL.o Root/AnaTuDoTtresResolved.o Root/AnaTuDoTtresBoosted.o Root/HistogramService.o Root/AnaTtresQCD.o
+OBJS_READ += Root/WeakCorrScaleFactorParam.o
 OBJS_READ += util/read.o
 
 OBJS_READTUDO += $(OBJS)
 OBJS_READTUDO += Root/EventCount.o
 OBJS_READTUDO += Root/Analysis.o Root/AnaTtresSL.o Root/AnaTuDoSL.o Root/AnaTuDoTtresResolved.o Root/AnaTuDoTtresBoosted.o Root/HistogramService.o
+OBJS_READTUDO += Root/WeakCorrScaleFactorParam.o
 OBJS_READTUDO += util/readTuDo.o
 
 # can use RootCore, but keep like this to make it portable
