@@ -1,3 +1,7 @@
+2015-12-02 Danilo Ferreira de Lima <dferreir@cern.ch>
+	* Added flag in read.cxx to apply EWK correction in ttbar.
+	* TopNtupleAnalysis-00-02-08
+
 2015-11-03 Marino Romano <sromanos@cern.ch>
 	* Updating the MM code 
 
